--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <section>
         <h2>À propos de moi</h2>
         <p>Actuellement étudiant en deuxième année dans une spécialité liée à la gestion numérique, je suis à la recherche d'un stage de 3 mois dans le domaine de ma formation.</p>
-        <img src="votre-photo.PNG" alt="Photo de profil" width="150">
+        <img src="votre-photo.png" alt="Photo de profil" width="150">
     </section>
 
     <nav>
